@@ -397,6 +397,7 @@ Supported actions for hardware offload are:
 - Modification of TCP/UDP (mod_tp_src/mod_tp_dst).
 - Clone/output (tnl_push and output) for encapsulating over a tunnel.
 - Tunnel pop, for changing from PF port to vport.
+- Offloading VXLAN vport.
 
 Further Reading
 ---------------
