@@ -33,6 +33,7 @@ v2.13.0 - 14 Feb 2020
      * Add support for DPDK 19.11.
      * Add hardware offload support for output, drop, set of MAC, IPv4,
        TCP/UDP ports and tunnel push-output/pop actions (experimental).
+     * Add hardware offload support VXLAN vports.
      * Add experimental support for TSO.
    - RSTP:
      * The rstp_statistics column in Port table will only be updated every
